FIXXING VISIBLITY OF OTP IMPUT PAGE

--- a/frontend/src/component/EmailVerification.css
+++ b/frontend/src/component/EmailVerification.css
@@ -58,7 +58,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 30px;
+    margin-top: 60px;
 }
 
 #emailVerificationbtn button {
